@@ -1,6 +1,7 @@
 - added raiser()
 - added idistinct()
 - added key argument to i?distinct()
+- added key argument to is_distinct()
 - added group_by_keys()
 Backward incompatible changes:
 - walk_values() now updates defaultdict item factory to composition of mapper and old one.
